After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750984 - GdMainView: generic view model not found when rebuilding
GdMainView: generic view model not found when rebuilding
Status: RESOLVED FIXED
Product: libgd
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libgd maintainer(s)
libgd maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-15 09:53 UTC by Adrien Plazas
Modified: 2015-06-19 15:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
main-view: Apply model before selection (1.05 KB, patch)
2015-06-15 09:54 UTC, Adrien Plazas
accepted-commit_now Details | Review
main-view: Model before selection mode (1.08 KB, patch)
2015-06-19 12:37 UTC, Adrien Plazas
committed Details | Review

Description Adrien Plazas 2015-06-15 09:53:14 UTC
When rebuilding the main view after changing the view type, this critical error occurend: Gtk-CRITICAL **: gtk_tree_model_foreach: assertion 'GTK_IS_TREE_MODEL (model)' failed.

This is caused when rebuilding the widget: the selection mode is applied before the model, causing the selection mode to have no model to work with.
Comment 1 Adrien Plazas 2015-06-15 09:54:15 UTC
Created attachment 305275 [details] [review]
main-view: Apply model before selection

This applies the model before the selection while rebuilding. This is
necessary because otherwise the model of the generic view may not be
set while applying the selection mode, causing critical errors.
Comment 2 Zeeshan Ali 2015-06-19 12:22:48 UTC
Review of attachment 305275 [details] [review]:

Looks good to me. Some nits (more like improvement ideas) as always :)

* "main-view: Apply model before selection" -> "main-view: Mdel before selection mode"
* "the selection" -> "applying the selection mode"
* "critical errors" -> "critical errors on console"
Comment 3 Adrien Plazas 2015-06-19 12:37:50 UTC
Created attachment 305695 [details] [review]
main-view: Model before selection mode

This applies the model before applying the selection mode while
rebuilding. This is necessary because otherwise the model of the generic
view may not be set while applying the selection mode, causing critical
errors on console.
Comment 4 Zeeshan Ali 2015-06-19 15:27:45 UTC
Attachment 305695 [details] pushed as 241f3d5 - main-view: Model before selection mode