main-view: Model before selection mode

This applies the model before applying the selection mode while
rebuilding. This is necessary because otherwise the model of the generic
view may not be set while applying the selection mode, causing critical
errors on console.

https://bugzilla.gnome.org/show_bug.cgi?id=750984